--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
     <script type="module" src="./js/script.js" defer></script>
     <!-- defer é uma tag que carregara tudo ao mesmo tempo, no entanto só será exutado apos o DOM estiver pronto -->
 
-    <title>Document</title>
+    <title>Staff-Table</title>
   </head>
 
   <body>
     <div class="container">
-      <h1>Staff table</h1>
+      <h1>Table of staff</h1>
 
       <div class="search-engine">
         <i class="uil uil-search search-icon"></i>
@@ -59,6 +59,7 @@
         </thead>
         <tbody></tbody>
       </table>
+      <div class="pagination-pages" id="pagination"></div>
     </div>
   </body>
 </html>
