--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     
     <!-- defer é uma tag que carregara tudo ao mesmo tempo, no entanto só será exutado apos o DOM estiver pronto -->
 
-    <title>Document</title>
-    <script type="module" crossorigin src="/staff-table/assets/index.d804883c.js"></script>
-    <link rel="stylesheet" href="/staff-table/assets/index.18cafc10.css">
+    <title>Staff-Table</title>
+    <script type="module" crossorigin src="/staff-table/assets/index.419902bc.js"></script>
+    <link rel="stylesheet" href="/staff-table/assets/index.077d16b1.css">
   </head>
 
   <body>
     <div class="container">
-      <h1>Staff table</h1>
+      <h1>Table of staff</h1>
 
       <div class="search-engine">
         <i class="uil uil-search search-icon"></i>
@@ -61,6 +61,7 @@
         </thead>
         <tbody></tbody>
       </table>
+      <div class="pagination-pages" id="pagination"></div>
     </div>
   </body>
 </html>
